add html sctructure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,274 @@
 	<title>Document</title>
 <link rel="stylesheet" href="/assets/style.css" /></head>
 <body>
-	<h1>Hi</h1>
+	<div id="wrapper">
+		<header id="header">
+			<div class="container">
+				<nav class="header-top">
+					<ul class="navigation">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Blog</a></li>
+						<li>
+							<a class="logo" href="index.html">
+								<img src="./assets/img-logo.png" alt="">
+								Expire
+							</a>
+						</li>
+						<li>
+							<a href="#">Pages</a>
+							<ul class="popup-navigation popup-arrow-top">
+								<li><a href="#">Typography</a></li>
+								<li><a href="#">404 Page</a></li>
+								<li><a href="#">Coming Soon</a></li>
+								<li>
+									<a href="#">Page Layouts</a>
+									<ul class="popup-navigation popup-arrow-left">
+										<li><a href="#">Dummy Item</a></li>
+										<li><a href="#">Dummy Item</a></li>
+										<li><a href="#">Dummy Item</a></li>
+										<li><a href="#">Dummy Item</a></li>
+										<li>
+											<a href="#">Dummy Item</a>
+											<ul class="popup-navigation popup-arrow-right">
+												<li><a href="#">Dummy Item</a></li>
+												<li><a href="#">Dummy Item</a></li>
+												<li><a href="#">Dummy Item</a></li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+								<li><a href="#">Services</a></li>
+							</ul>
+						</li>
+						<li><a href="#">About us</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+		
+					<div class="slider slider-header">
+						<div class="slider-slide">
+							<h1>Expire</h1>
+							<p>Professionaly designed, carefully made for your enjoyement</p>
+							<div class="slider-buttons">
+								<a class="btn-general btn-dark" href="#">Explore</a>
+								<a class="btn-general btn-dark" href="#">Rearn more</a>
+							</div>
+							<div class="slider-arrows">
+								<div class="slider-arrow slider-arrow-left"></div>
+								<div class="slider-arrow slider-arrow-right"></div>
+							</div>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</header>
+	</div>
+	<div class="wrapper">
+		<section id="parallax">
+			<div class="container">
+				<h3>Paralax section</h3>
+				<h4>Exploring the unexplored is a risky business, but a rewarding one.</h4>
+				<blockquote class="quote-parallax">
+					Design is in everything we make, but it's also between those things. 
+					It's a mix of craft, science, storytelling, propaganda, and philosophy.
+				</blockquote>
+				<p class="author-quote-parallax">— Erik Adigard</p>
+			</div>
+		</section>
+		<section id="statistics">
+			<div class="container">
+				<ul class="list-statistics">
+					<li class="icon-users">
+						<strong>1000+</strong>
+						<span>Happy users</span>
+					</li>
+					<li class="icon-products">
+						<strong>200</strong>
+						<span>Sold products</span>
+					</li>
+					<li class="icon-comments">
+						<strong>5632</strong>
+						<span>Comments</span>
+					</li>
+					<li class="icon-users">
+						<strong>25000+</strong>
+						<span>Lines of code</span>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section id="blog">
+			<div class="container">
+				<div class="container-head head-centered">
+					<h2>Latest Blog Posts</h2>
+					<h4>
+						Information is a source of learning. But unless it is organized, processed,
+						and available to the right people in a format for decision making, it is a burden, not a benefit.
+					</h4>
+				</div>
+				<div class="list-posts">
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+					<div class="block-post">
+						<div class="img-block-post"></div>
+						<a href="#">Just Another Blog Post</a>
+						<ul class="short-info-post">
+							<li class="icon-author">By Author</li>
+							<li class="icon-calendar">9 November 2014</li>
+							<li class="icon-comment">3</li>
+						</ul>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis at, voluptatem similique tempora voluptate quia in ea minima earum consequatur eveniet, praesentium illum error delectus optio nobis eaque distinctio! Suscipit nostrum?</p>
+						<a class="btn-general btn-light read-more" href="#">Read more</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="portfolio">
+			<h2>Latest portfolio</h2>
+			<div class="list-portfolio">
+				<div class="portfolio-block">
+					<h5>Big City</h5>
+					<p>Art, Photography, City</p>
+					<footer>
+						<ul class="list-icons-portfolio-block">
+							<li><a class="icon-ti-link" href="#"></a></li>
+							<li><a href="icon-zoom-in"></a></li>
+						</ul>
+					</footer>
+				</div>
+			</div>
+		</section>
+		<section id="contact-us">
+			<div class="container">
+				<div class="container-head head-centered">
+					<h2>Get to know us better</h2>
+					<h4>Contact us, and we will contact you back. Want to chat? We can do that too.</h4>
+				</div>
+				<div class="contact-content">
+					<div class="contact-list">
+						<ul class="contact-list-items">
+							<li>
+								623 Fifth Avenue,
+								New York, NY 10022, 
+								USA
+							</li>
+							<li>
+								<a href="mailto:randomness@expire.com">randomness@expire.com</a>
+							</li>
+							<li>
+								Phone: <a href="tel:+1234567890">+(123) 456 7890</a>
+								Fax: <a href="tel:+1234567890"></a>+(123) 456 7899</a>
+								<a href="#"></a>
+							</li>
+						</ul>
+					</div>
+					<div class="contact-form">
+						<form action="#">
+							<div class="form-group">
+								<input class="input-general" type="text" name="name" placeholder="Name">
+								<input class="input-general" type="email" name="email" placeholder="E-mail">
+							</div>
+							<div class="form-group">
+								<input class="input-general" type="text" name="subject" placeholder="Subject">
+							</div>
+							<div class="form-group">
+								<textarea class="textarea-general" name="message" placeholder="Message"></textarea>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
+	<footer id="footer">
+
+		<ul class="footer-socials">
+			<li><a class="icon-facebook" href="#" class="icon*" target="_blank"></a></li>
+			<li><a class="icon-twitter" href="#" class="icon*" target="_blank"></a></li>
+			<li><a class="icon-linkedin" href="#" class="icon*" target="_blank"></a></li>
+			<li><a class="icon-googleplus" href="#" class="icon*" target="_blank"></a></li>
+			<li><a class="icon-instagram" href="#" class="icon*" target="_blank"></a></li>
+		</ul>
+		<a href="index.html" class="logo">
+			<img src="./assets/img-logo.png" alt="">
+			Expire
+		</a>
+		<p class="copyrights">© Copyright 2014, design by dingo_design</p>
+	</footer>
 </body>
 </html>
